tests/ui/wrong_number_of_args_unit.stderr
error: 3 or 4 comma-separated args expected.

  = help: Use `#[unit(<ident>, "<symbol>", <si_prefix>, <scale>)]`
or  `#[unit(<ident>, "<symbol>", <scale>)]`.

  --> tests/ui/wrong_number_of_args_unit.rs:15:1
   |
15 | #[unit(B, "b", 0.4, NONE, "bla")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
